2007-03-22  J. Mowery  <jmowery@tresys.com>

	* Libapol SWIG wrapper updated to treat all structures as classes
	  in the target language.

2007-03-21  J. Tang  <jtang@tresys.com>

	* Added ability for user to specify type joins and splits in
	sediffx.  The libpoldiff library had always supported this
	feature; it just was not available through the user interface.

2007-03-20  J. Mowery  <jmowery@tresys.com>

	* Renamed apol_domain_trans_table_destroy to domain_trans_table_destroy
	  and moved to policy-query-internal.h; this function was not intended
	  for external use.

2007-03-19  J. Tang  <jtang@tresys.com>

	* When viewing AV rule differences, click (either left or right) a
	permission name.  This will now popup a menu that gives line
	numbers for rules that contributed just that permission, rather
	than the entire AV rule.  This is enabled when source policies are
	used.

2007-03-16  J. Tang  <jtang@tresys.com>

	* Added poldiff_avrule_get_orig_line_numbers_for_perm() and
	poldiff_avrule_get_mod_line_numbers_for_perm().

2007-03-15  J. Tang  <jtang@tresys.com>

	* Split libpoldiff/include/rule_diff.h into
	libpoldiff/include/avrule_diff.h and
	libpoldiff/include/terule_diff.h.  None of the function names were
	changed.

	* Re-standardized all programs' command line options.  -V always
	shows the version, -c always deals with object classes, and so
	forth.  Man pages updated.

	* Renamed libapol/include/rangetrans-query.h to
	libapol/include/range_trans-query.h.  Likewise renamed
	libpoldiff's rangetrans_diff.h  None of the function names were
	changed.

2007-03-13  J. Tang  <jtang@tresys.com>

	* fixed segfault in libseaudit when, while parsing an AVC
	message's permissions list it does not encounter a closing brace.

	* information flow graphs are now being constructed via a BST and
	its O(log n), rather than via a vector and O(n).  It should be
	noticeably faster now.

	* fixed error in information flow analysis, transitive mode.  The